--- a/Uplaud/app/src/main/res/values/strings.xml
+++ b/Uplaud/app/src/main/res/values/strings.xml
@@ -7,5 +7,7 @@
     <string name="nombre">Escribe tu Nombre:</string>
     <string name="aceptar">Aceptar</string>
     <string name="title_activity_saludo">Saludo</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="app_id">1582801361934011</string>
 
 </resources>
