--- a/Almashopping2/app/src/main/res/values/strings.xml
+++ b/Almashopping2/app/src/main/res/values/strings.xml
@@ -14,6 +14,9 @@
     <string name="drawer_open">Slider Menu Opened</string>
     <string name="drawer_close">Slider Menu Closed</string>
     <string name="username">Nombre de Usuario</string>
+    <integer name="IdAPlicacion">1</integer>
+    <string name="urlRestCore">http://mauropalacio.co/ostiamovil/v1/index.php/</string>
+
 
     <!-- Nav Drawer Menu Items -->
     <string-array name="nav_drawer_items">
